# homework

./: .gitignore  .travis.yml  1196-history_exam.cpp  1496-spammer.cpp  1545-hieroglyphs.cpp  1837-isenbaev_s_number.cpp  CMakeLists.txt  README  README.md  allocator.cpp  allocator.h  async.cpp  async.h  async_internal.cpp  async_internal.h  asyncqueue.h  btest_bulk.cpp  bulk.cpp  bulk.h  command.h  counters.h  create_test_result.sh  design.md  document.h  dot.travis.yml  graphicsprimitive.h  gtest_bulk.cpp  hieroglyphs.cpp  history_exam.cpp  homework_tools.cpp  homework_tools.h  hw_assignment.md  hw_assignment.txt  input.txt  intergrate_gtest_gmock.cpp  interpreter.cpp  interpreter.h  ip_filter.cpp  ip_filter.h  isenbaev_s_number.cpp  (+43 more)
docs/: 1196-History_Exam.md  1196_input.txt  1196_input_1.txt  1496-Spammer.md  1496_output.txt  1545-Hieroglyphs.md  1545_output.txt  1837-Isenbaev_s_Number.md  1837_input.txt  1837_output_2.txt  Doxyfile.in  README.md  hw_assignment.md  input_1.txt  input_4.txt  parser_state_machine.uml
example/: CMakeLists.txt
html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated.js  class_abstract_writer-members.html  class_abstract_writer.html  class_abstract_writer.js  class_abstract_writer__coll__graph.dot  class_abstract_writer__coll__graph.md5  class_abstract_writer__inherit__graph.dot  class_abstract_writer__inherit__graph.map  class_abstract_writer__inherit__graph.md5  class_block-members.html  class_block.html  class_block.js  class_block__coll__graph.dot  class_block__coll__graph.map  class_block__coll__graph.md5  class_block__inherit__graph.dot  class_block__inherit__graph.map  class_block__inherit__graph.md5  class_block_a28f1bb418f67d7d1498a00363f282ba4_cgraph.dot  class_block_a28f1bb418f67d7d1498a00363f282ba4_cgraph.map  class_block_a28f1bb418f67d7d1498a00363f282ba4_cgraph.md5  class_block_a28f1bb418f67d7d1498a00363f282ba4_icgraph.dot  class_block_a28f1bb418f67d7d1498a00363f282ba4_icgraph.map  class_block_a28f1bb418f67d7d1498a00363f282ba4_icgraph.md5  class_block_a37658a946bf5067ad01d68d9ff086adc_icgraph.dot  class_block_a37658a946bf5067ad01d68d9ff086adc_icgraph.map  class_block_a37658a946bf5067ad01d68d9ff086adc_icgraph.md5  class_block_a8b7cc2938bfd46b201a6a09a7c5a94fe_icgraph.dot  class_block_a8b7cc2938bfd46b201a6a09a7c5a94fe_icgraph.map  class_block_a8b7cc2938bfd46b201a6a09a7c5a94fe_icgraph.md5  class_block_aa7de409890aabd315f5ff517ad117a8a_icgraph.dot  class_block_aa7de409890aabd315f5ff517ad117a8a_icgraph.map  class_block_aa7de409890aabd315f5ff517ad117a8a_icgraph.md5  class_block_ac22f0eb78641fc6ec32e4979007f27a5_cgraph.dot  class_block_ac22f0eb78641fc6ec32e4979007f27a5_cgraph.map  class_block_ac22f0eb78641fc6ec32e4979007f27a5_cgraph.md5  class_block_ac22f0eb78641fc6ec32e4979007f27a5_icgraph.dot  (+388 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_2.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  (+28 more)
include/: async_internal.h  filedivider.h  filesystemops.h  interpreter.h  mapper.h  maprunner.h  messagequeue.h  parserstate.h  preprocessor.h  reducer.h  reporters.h  scheduler.h  trie.h  writerfactory.h  xray.h
sandbox/: CMakeLists.txt  counting_iterator.h  log_allocator.cpp  log_tools.h  logging_allocator.h  map_iterator.cpp  min_allocator.cpp  minimal_allocator.h  reg_exp.cpp  regex_vs_boost_tokenizer.cpp  test_list.cpp  value_iterator.cpp  xray.h
src/: async.cpp  async_internal.cpp  filedivider.cpp  filesystemops.cpp  main.cpp  mapemailaddress.cpp  mapper.cpp  maprunner.cpp  parser.cpp  preprocessor.cpp  reducerunner.cpp  scheduler.cpp  test_async.cpp  test_version.cpp
test_data/: input_4.txt
tests/: input_2.txt  input_5.txt  run.sh  test_list.cpp
threads/: CMakeLists.txt  threads.cpp
